@@ -1805,6 +1805,8 @@ include/optical.h svneol=native#text/plain
 include/optical/CMakeLists.txt svneol=native#text/plain
 include/optical/debug.h svneol=native#text/plain
 include/optical/defines.h svneol=native#text/plain
+include/optical/shadefuncs.h svneol=native#text/plain
+include/optical/shadework.h svneol=native#text/plain
 include/pc.h svneol=native#text/plain
 include/photonmap.h svneol=native#text/plain
 include/pkg.h svneol=native#text/plain
@@ -1889,8 +1891,6 @@ include/rt/wdb.h svneol=native#text/plain
 include/rt/xray.h svneol=native#text/plain
 include/rtgeom.h svneol=native#text/plain
 include/rtserver.h svneol=native#text/plain
-include/shadefuncs.h svneol=native#text/plain
-include/shadework.h svneol=native#text/plain
 include/spectrum.h svneol=native#text/plain
 include/sysv.h svneol=native#text/plain
 include/tclcad.h svneol=native#text/plain
