@@ -32,13 +32,27 @@
 #include "common.h"
 
 #include "bu/vls.h"
-#include "shadefuncs.h"
-#include "shadework.h"
-
 __BEGIN_DECLS
 
 #include "optical/defines.h"
 #include "optical/debug.h"
+#include "optical/shadework.h"
+#include "optical/shadefuncs.h"
+
+/* for libmultispectral */
+
+/* FIXME: these should not need to be declared for libmultispectral.
+ * breaks encapsulation/modularity of shaders if we have to list them
+ * in more than one place.  maybe give multispectral arrays their own
+ * suffix so as not to conflict.
+ */
+
+OPTICAL_EXPORT extern struct mfuncs camo_mfuncs[];
+OPTICAL_EXPORT extern struct mfuncs light_mfuncs[];
+OPTICAL_EXPORT extern struct mfuncs stk_mfuncs[];
+OPTICAL_EXPORT extern struct mfuncs phg_mfuncs[];
+OPTICAL_EXPORT extern struct mfuncs noise_mfuncs[];
+OPTICAL_EXPORT extern struct bn_table *spectrum;
 
 /**
  * this function sets the provided mfuncs head pointer to the list of
