@@ -50,25 +50,6 @@ __BEGIN_DECLS
 #  endif
 #endif
 
-/* for libmultispectral */
-
-/* FIXME: these should not need to be declared for libmultispectral.
- * breaks encapsulation/modularity of shaders if we have to list them
- * in more than one place.  maybe give multispectral arrays their own
- * suffix so as not to conflict.
- */
-
-OPTICAL_EXPORT extern struct mfuncs camo_mfuncs[];
-OPTICAL_EXPORT extern struct mfuncs light_mfuncs[];
-OPTICAL_EXPORT extern struct mfuncs stk_mfuncs[];
-OPTICAL_EXPORT extern struct mfuncs phg_mfuncs[];
-OPTICAL_EXPORT extern struct mfuncs noise_mfuncs[];
-OPTICAL_EXPORT extern struct bn_table *spectrum;
-
-OPTICAL_EXPORT extern int	rdebug;
-
-
-
 /* for liboptical */
 OPTICAL_EXPORT extern double AmbientIntensity;
 #ifdef RT_MULTISPECTRAL
